# kubernetes-clone

controller/: Cargo.toml
controller/src/: main.rs
minimal-api/: Cargo.toml
minimal-api/src/: main.rs
worker-app/: worker-app.sln
worker-app/worker-app/: Program.cs  Worker.cs  worker-app.csproj
worker-app/worker-app/Properties/: launchSettings.json
