[package]
name = "controller"
version = "0.1.0"
authors = ["Sumeet More <more.sumeet.12ee1028@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis-async = "0.9.2"
futures = "0.3"
tokio = { version = "1.6.0", features = ["full"] }