[package]
name = "minimal-api"
version = "0.1.0"
authors = ["Sumeet More"]
edition = "2018"

[dependencies]
mobc = "0.7"
mobc-redis = { version = "0.7", default-features = false, features = ["async-std-comp"] }
redis = "0.19.0"
serde = "1"
serde_json = "1"
tokio = "1.6.0"
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.2"